# sort_vis

./: Cargo.toml  LICENSE-MIT  README.md  ci.sh  rustfmt.toml
.github/workflows/: ci.yml  dependencies.yml  release.yml
ci/: check.sh  dependencies.sh  fmt.sh
scripts/: ci.sh  dependencies.sh
src/: app.rs  array.rs  lib.rs  main.rs  state.rs
src/app/: array.rs  fixed_time.rs  message.rs  sort.rs  sorter.rs
src/app/array/: controller.rs  view.rs
src/app/fixed_time/: tests.rs
src/app/sort/: bubble.rs  shuffle.rs
src/app/sorter/: slice.rs  sort.rs  view.rs
src/app/sorter/sort/: binary_insertion.rs  bogo.rs  bubble.rs  heap.rs  insertion.rs  reverse.rs  selection.rs  shuffle.rs
src/app/sorter/view/: simple.rs
src/sort/: bogo.rs  bogosort.rs  bubble.rs  heap.rs  insertion.rs  merge.rs  mod.rs  selection.rs
src/state/: mod.rs
