[package]
name = "sort_vis"
version = "0.2.0"
authors = ["Guillaume Dallenne <dallenneguillaume@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
async-executor = "1.5.1"
color-eyre = "0.6.2"
futures-lite = "1.13.0"
nannou = "0.18.1"
nannou_egui = "0.5.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
unicode-segmentation = "1.10.1"

[profile.dist]
inherits = "release"
lto = true
codegen-units = 1
